[gd_scene load_steps=3 format=2]

[ext_resource path="res://app/plan_node/behaviour_option.gd" type="Script" id=1]
[ext_resource path="res://app/plan_node/plan_node.gd" type="Script" id=2]

[node name="PlanNode" type="GraphNode"]
margin_right = 152.0
margin_bottom = 142.0
title = "Plan"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 166.0
margin_bottom = 176.0
custom_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 10.0
margin_right = 150.0
margin_bottom = 152.0
custom_constants/separation = 10

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 24.0
text = "Name"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="BehaviourOption" type="OptionButton" parent="MarginContainer/VBoxContainer" groups=["update_schema"]]
margin_top = 34.0
margin_right = 150.0
margin_bottom = 58.0
rect_min_size = Vector2( 150, 24 )
size_flags_vertical = 3
text = "Behaviour"
clip_text = true
align = 1
script = ExtResource( 1 )

[node name="IntervalSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 150.0
margin_bottom = 92.0
size_flags_vertical = 3
align = 1
prefix = "Interval"
suffix = "ms"

[node name="ActiveButton" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_left = 15.0
margin_top = 102.0
margin_right = 135.0
margin_bottom = 142.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
enabled_focus_mode = 0
text = "Active"
flat = true
